# messages-api

./: .dockerignore  .env.development.example  .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: pr-quality.yml
.local/: entrypoint  start_api
src/app/: main.py
src/tests/: pytest.ini
src/tests/functional/features/admin/: create_channel.feature  manage_consumer.feature  manage_subscriptions.feature  test_feature_spects.py
src/tests/integration_tests/features/: arguments.feature  test_publish_article.py
