[tool.poetry]
name = "messages-api"
version = "0.1.0"
description = "This service enables the sending and receiving of events through the HTTP REST protocol, without depending on a specific implementation of an event broker or queue"
authors = ["Grupo Simpli <info@gruposimpli.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.100.0"
pydantic = "^2.0.2"
pymongo = "^4.4.0"
unicorn = "^2.0.1.post1"
pika = "^1.3.2"
uvicorn = "^0.22.0"
httpx = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-bdd = "^6.1.1"
pytest-cov = "^4.1.0"
pytest-env = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
